# wayland-imf

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
crates/ime-core/: Cargo.toml
crates/ime-core/src/: lib.rs
crates/imf-core/: Cargo.toml
crates/imf-core/src/: lib.rs
crates/ja-im/: Cargo.toml
crates/ja-im/src/: dict.rs  lib.rs  romaji.rs
crates/japanese-ime/: Cargo.toml
crates/japanese-ime/src/: lib.rs  romaji.rs
src/: ime.rs  keyboard.rs  lib.rs  main.rs  state.rs  ui.rs  wayland.rs
