[workspace]
resolver = "3"
members = ["crates/ime-core", "crates/ja-im"]

[workspace.dependencies]
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client"] }
wayland-protocols-misc = { version = "0.3.12", features = ["client"] }
xkbcommon = "0.9.0"
imf-core.path = "crates/ime-core"
japanese-ime.path = "crates/ja-im"

[package]
name = "wayland-imf"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
wayland-client.workspace = true
wayland-protocols.workspace = true
wayland-protocols-misc.workspace = true
xkbcommon.workspace = true
imf-core.workspace = true
japanese-ime.workspace = true
